Fix padding for button. This padding appear in Firefox. On Chrome this padding visible on hover.

--- a/css/menu.css
+++ b/css/menu.css
@@ -1,6 +1,5 @@
 .dropbtn {
     color: white;
-    padding: 16px;
     font-size: 16px;
     border: none;
 }
